--- a/pages/index/confirm/confirm.wxml
+++ b/pages/index/confirm/confirm.wxml
@@ -11,63 +11,63 @@
     <!-- address -->
     <view class='confirm__address__info'>
       <text style='display:block'>收货人 : {{defAddressInfo.consignee}} <text class='confirm__address__tel'>{{defAddressInfo.phone}}</text></text>
-      <text>收货地址 : {{defAddressInfo.location}} {{defAddressInfo.detailedAddress}}</text>
+      <text>收货地址 : {{defAddressInfo.location}}{{defAddressInfo.street}}{{defAddressInfo.detailedAddress}}</text>
     </view>
     <!-- address end -->
 
     <!-- choose -->
     <view class='confirm__express__info'>
       <text>上门自提</text>
-      <image wx:if='{{!isSendClick}}' class='confirm__express__success' src='../../../img/unSuccess.png' bindtap='isSend' />
-      <image wx:if='{{isSendClick}}' class='confirm__express__success' src='../../../img/success.png' bindtap='isSend' />
+      <image wx:if='{{isSendClick == 1}}' class='confirm__express__success' src='../../../img/unSuccess.png' bindtap='isSend' />
+      <image wx:if='{{isSendClick == 2}}' class='confirm__express__success' src='../../../img/success.png' bindtap='isSend' />
     </view>
     <!-- choose end -->
 
     <!-- shop info -->
-    <block wx:for='{{[1,2,3,4]}}' wx:key='*this'>
-      <view class='confirm__shop__info'>
-        <view class='confirm__shop__image'>
-          <image src='../../../img/listDef.png' />
-        </view>
-        <view class='confirm__shop__name'>
-          <text>商品名称商品名</text>
-          <text style='display:block'>500ml/瓶</text>
-        </view>
-        <view class='confirm__shop__num'>
-          <view>¥ 1180.00</view>
-          <view style='color:rgb(135, 135, 135)'>x1</view>
+
+    <view class='confirm__shop__info'>
+      <view class='confirm__shop__image'>
+        <image src='{{shoppingInfo.dataInfo.imgUrl}}' />
+      </view>
+      <view class='confirm__shop__name'>
+        <text>{{shoppingInfo.dataInfo.title}}</text>
+        <text style='display:block'>{{shoppingInfo.dataInfo.capacity}}</text>
+      </view>
+      <view class='confirm__shop__num'>
+        <view>¥ {{shoppingNumber
+          < shoppingInfo.dataInfo.discountNumber ? shoppingNumber*shoppingInfo.dataInfo.price : shoppingNumber*shoppingInfo.dataInfo.tradePrice}}.00</view>
+            <view style='color:rgb(135, 135, 135)'>x{{shoppingNumber}}</view>
         </view>
       </view>
-    </block>
 
-    <!-- shop info end -->
+      <!-- shop info end -->
 
-    <!-- num -->
-    <!-- <view class='details__bottom__buyCard__num'>
-      <text class='details__bottom__buyCard__text'>购买数量</text>
-      <view class='details__bottom__buyCard__jz'>
-        <text data-status='subtraction' style='color:rgb(246, 76, 22)' bindtap='jzNum'>-</text>
-        <text style='color:rgb(135, 135, 135)'>{{shoppingNumber}}</text>
-        <text data-status='addition' style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap='jzNum'>+</text>
+      <!-- num -->
+      <view class='details__bottom__buyCard__num'>
+        <text class='details__bottom__buyCard__text'>购买数量</text>
+        <view class='details__bottom__buyCard__jz'>
+          <text data-status='subtraction' style='color:rgb(246, 76, 22)' bindtap='jzNum'>-</text>
+          <text style='color:rgb(135, 135, 135)'>{{shoppingNumber}}</text>
+          <text data-status='addition' style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap='jzNum'>+</text>
+        </view>
       </view>
-    </view> -->
-    <!-- num end -->
+      <!-- num end -->
 
-    <!-- coupon -->
-    <view class='confirm__coupon'>
-      <text class='confirm__coupon__text'>使用优惠券</text>
-      <text class='confirm__coupon__num'>-10.00</text>
+      <!-- coupon -->
+      <view class='confirm__coupon'>
+        <text class='confirm__coupon__text'>使用优惠券</text>
+        <text class='confirm__coupon__num'>-10.00</text>
+      </view>
+      <!-- coupon end -->
+      <view style='height:120rpx; width:100%; background-color:#e0e0e0'></view>
+      <view class='confirm__bottom'>
+        <view class='confirm__bottom__left'>
+          <text>共{{shoppingNumber}}件 , 合计¥ : <text style='color:rgb(246, 76, 22)'>{{shoppingNumber < shoppingInfo.dataInfo.discountNumber ? shoppingNumber*shoppingInfo.dataInfo.price : shoppingNumber*shoppingInfo.dataInfo.tradePrice}}.00</text></text>
+        </view>
+        <view class='confirm__bottom__right' bindtap='payment'>
+          <text>提交订单</text>
+        </view>
+      </view>
+      <view class='body_bg'></view>
     </view>
-    <!-- coupon end -->
-
-    <view class='confirm__bottom'>
-      <view class='confirm__bottom__left'>
-        <text>共X件 , 合计 : <text style='color:rgb(246, 76, 22)'>100.00</text></text>
-      </view>
-      <view class='confirm__bottom__right'>
-        <text>提交订单</text>
-      </view>
-    </view>
-    <view class='body_bg'></view>
   </view>
-</view>
