--- a/pages/index/confirm/confirm.wxss
+++ b/pages/index/confirm/confirm.wxss
@@ -30,13 +30,14 @@
 
 .confirm__address__info {
   width: 100%;
-  height: 200rpx;
+  height: 160rpx;
   display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
   border-bottom: 1rpx solid #666;
   overflow: hidden;
+  font-size: 35rpx;
 }
 
 .confirm__address__info >text {
@@ -91,6 +92,7 @@
   white-space: nowrap;
   word-wrap: normal;
   border-bottom: 1rpx solid #ccc;
+  border-top: 1rpx solid #ccc;
 }
 
 .details__bottom__buyCard__text {
@@ -116,7 +118,6 @@
   white-space: nowrap;
   word-wrap: normal;
   border-top: 1rpx solid #ccc;
-  margin-bottom: 100rpx;
 }
 
 .confirm__coupon__text {
