--- a/pages/shoppingCar/index.wxml
+++ b/pages/shoppingCar/index.wxml
@@ -24,42 +24,13 @@
   <view class="page__bd">
     <view class="weui-panel weui-panel_access">
       <view class="weui-panel__bd">
-
-        <!-- <view wx:for="{{carts}}" class="weui-media-box weui-media-box_appmsg margin_b">
-          <radio color="#FF6319" checked="{{item.selected}}" bindtap="selectList" data-index="{{index}}" />
-          <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-            <image class="weui-media-box__thumb" src="../../img/listDef.png" />
-          </view>
-          <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
-            <navigator url="/pages/index/details/details?id={{item.id}}" hover-class="weui-cell_active">
-              <view class="weui-media-box__title">
-                <text class="float_left">{{item.title}}{{item.title}}{{item.title}}</text>
-                <text class="float_right">￥{{item.price}}</text>
-              </view>
-            </navigator>
-            <view wx:if="{{editOrComplete==='编辑'}}" class="weui-media-box__title">
-              <text class="float_left">500ml/瓶</text>
-              <text>*{{item.num}}</text>
-            </view>
-
-            <view wx:if="{{editOrComplete==='完成'}}" class='weui-media-box__title'>
-              <view class='details__bottom__buyCard__jz'>
-                <text style='color:rgb(246, 76, 22)' bindtap="minusCount" data-index="{{index}}">-</text>
-                <text style='color:rgb(135, 135, 135)'>{{item.num}}</text>
-                <text style='color:rgb(246, 76, 22); padding-right:50rpx;' bindtap="addCount" data-index="{{index}}">+</text>
-              </view>
-            </view>
-
-          </view>
-        </view> -->
-
         <view wx:for="{{carLists}}" wx:key="*this" class="weui-media-box weui-media-box_appmsg margin_b">
            <radio color="#FF6319" checked="{{item.selected}}" bindtap="selectList" data-index="{{index}}" /> 
           <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
             <image class="weui-media-box__thumb" src="{{item.goods.imgUrl}}" />
           </view>
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg text_right">
-            <navigator url="/pages/index/details/details?id={{item.id}}" hover-class="weui-cell_active">
+            <navigator url="/pages/index/details/details?id={{item.goodsId}}" hover-class="weui-cell_active">
               <view class="weui-media-box__title">
                 <text class="float_left">{{item.goods.title}}</text>
                 <text class="float_right">￥{{item.goods.price}}</text>
