--- a/pages/index/confirm/confirm.wxss
+++ b/pages/index/confirm/confirm.wxss
@@ -30,23 +30,41 @@
 
 .confirm__address__info {
   width: 100%;
-  height: 160rpx;
+  height: 180rpx;
+  padding-left: 20rpx;
+  border-bottom: 1rpx solid #666;
+  font-size: 35rpx;
+}
+
+.confirm__address__info >view {
+  display: inline-block;
+  height: 180rpx;
+}
+.address__info__left{
+  width: 650rpx;
   display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
   word-wrap: normal;
-  border-bottom: 1rpx solid #666;
   overflow: hidden;
-  font-size: 35rpx;
+  line-height: 2.6em;
 }
-
-.confirm__address__info >text {
-  padding-left: 20rpx;
+.address__info__right{
   line-height: 2.4em;
 }
 
 .confirm__address__tel {
   padding-left: 50rpx;
+}
+
+.confirm__address__info__right {
+  border-right: 2px solid #000;
+  border-bottom: 2px solid #000;
+  width: 50rpx;
+  height: 50rpx;
+  color: #bbb;
+  transform: rotate(-45deg);
+  margin-top: 60rpx;
 }
 
 .weui-panel {
