--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -3,7 +3,7 @@
 <view class="page">
   <view class="page__bd">
     <view class="userinfoImg" bindtap="bindViewTap">
-      <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+      <image wx:if="{{userInfo.avatarUrl}}" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
       <view class="userinfo-nickname">{{userInfo.nickName}}</view>
     </view>
     <view class="userinfo">
