--- a/pages/user/order/order.wxml
+++ b/pages/user/order/order.wxml
@@ -40,7 +40,7 @@
           </view>
           <view class="button_view clear" wx:if="{{ordersLists.status==1}}">
             <button size="mini" data-index="{{index}}" bindtap="cancelOrder">取消订单</button>
-            <button size="mini" class="orange" data-index="{{index}}">付款</button>
+            <button size="mini" class="orange" data-index="{{index}}" bindtap="payOrder">付款</button>
           </view>
           <view class="button_view clear" wx:if="{{ordersLists.status==2}}">
             <button size="mini" class="orange">提醒发货</button>
