--- a/pages/index/orderConfirm/orderConfirm.wxml
+++ b/pages/index/orderConfirm/orderConfirm.wxml
@@ -12,40 +12,35 @@
     <view class='confirm__address__info'>
       <view class='address__info__left'>
         <text>收货人 : </text>
-        <text>{{defAddressInfo.consignee}}</text>
-        <text class='confirm__address__tel'>{{defAddressInfo.phone}}\n</text>
+        <text>{{shoppingInfo.receiver}}</text>
+        <text class='confirm__address__tel'>{{shoppingInfo.mobile}}\n</text>
         <text>收货地址 : </text>
-        <text>{{defAddressInfo.location}}{{defAddressInfo.street}}</text>
-        <text>{{defAddressInfo.detailedAddress}}</text>
+        <text>{{shoppingInfo.addressStr}}</text>
       </view>
-      <view class='address__info__right' bindtap='linkAddress'>
-        <view class='confirm__address__info__right'></view>
-      </view>
-
     </view>
     <!-- address end -->
 
     <!-- choose -->
     <view class='confirm__express__info'>
       <text>上门自提</text>
-      <image wx:if='{{isSendClick == 1}}' class='confirm__express__success' src='../../../img/unSuccess.png' bindtap='isSend' />
-      <image wx:if='{{isSendClick == 2}}' class='confirm__express__success' src='../../../img/success.png' bindtap='isSend' />
+      <image wx:if='{{shoppingInfo.isSelfRaised == 1}}' class='confirm__express__success' src='../../../img/unSuccess.png' bindtap='isSend' />
+      <image wx:if='{{shoppingInfo.isSelfRaised == 2}}' class='confirm__express__success' src='../../../img/success.png' bindtap='isSend' />
     </view>
     <!-- choose end -->
 
     <!-- shop info -->
-    <block wx:for="{{shoppingInfo}}" wx:key="*this">
+    <block wx:for="{{shoppingInfo.orderGoods}}" wx:key="*this">
       <view class='confirm__shop__info'>
         <view class='confirm__shop__image'>
-          <image src='{{item.goods.imgUrl}}' />
+          <image src='{{item.goodsImgUrl}}'/>
         </view>
         <view class='confirm__shop__name'>
-          <text>{{item.goods.title}}</text>
-          <text style='display:block'>{{item.goods.capacity}}</text>
+          <text>{{item.goodsTitle}}</text>
+          <text style='display:block'>{{item.capacity}}</text>
         </view>
         <view class='confirm__shop__num'>
-          <view>¥{{item.priceTotal}}.00</view>
-          <view style='color:rgb(135, 135, 135)'>x{{item.number}}</view>
+          <view>¥{{item.goodsPrice}}.00</view>
+          <view style='color:rgb(135, 135, 135)'>x{{item.goodsNum}}</view>
         </view>
       </view>
     </block>
@@ -60,10 +55,10 @@
     <view style='height:120rpx; width:100%; background-color:#e0e0e0'></view>
     <view class='confirm__bottom'>
       <view class='confirm__bottom__left'>
-        <text>共{{allNumber}}件 , 合计¥ : <text style='color:rgb(246, 76, 22)'>{{allPrice}}.00</text></text>
+        <text>共{{shoppingInfo.number}}件 , 合计¥ : <text style='color:rgb(246, 76, 22)'>{{shoppingInfo.price}}.00</text></text>
       </view>
       <view class='confirm__bottom__right' bindtap='payment'>
-        <text>提交订单</text>
+        <text>确认支付</text>
       </view>
     </view>
     <view class='body_bg'></view>
