--- a/pages/user/order/order.wxml
+++ b/pages/user/order/order.wxml
@@ -7,16 +7,18 @@
 
 
       <view class="weui-panel__bd" wx:for="{{ordersLists}}" wx:for-item="ordersLists" wx:key="*this">
-        <view wx:if="{{ordersLists.status==1 || ordersLists.status==2 || ordersLists.status==3 || ordersLists.status==4}}">
+        <view>
           <view class="weui-media-box__bd weui-media-box__bd_in-appmsg ">
             <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==1}}">等待买家付款</view>
-            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==2}}">等待卖家发货</view>
-            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==3}}">等待买家收货</view>
-            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==4}}">交易成功</view>
-            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==5}}">订单正在取消</view>
-            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==6}}">订单已取消</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==2}}">订单处理中...</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==3}}">等待卖家发货</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==4}}">等待买家收货</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==5}}">订单完成</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==6}}">订单取消中...</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==7}}">订单已取消</view>
+            <view class="weui-media-box__title text_ringht margin_right" wx:if="{{ordersLists.status==8}}">订单已删除</view>
             <block wx:for="{{ordersLists.orderGoods}}" wx:for-item="orderGoods" wx:key="*this">
-              <navigator url="/pages/index/orderConfirm/orderConfirm?id={{orderGoods.goodsId}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+              <navigator url="/pages/index/orderConfirm/orderConfirm?id={{ordersLists.id}}&status={{ordersLists.status}}" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
                 <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
                   <image class="weui-media-box__thumb" src="{{orderGoods.goodsImgUrl}}" />
                 </view>
@@ -42,23 +44,19 @@
             <button size="mini" data-index="{{index}}" bindtap="cancelOrder">取消订单</button>
             <button size="mini" class="orange" data-index="{{index}}" bindtap="payOrder">付款</button>
           </view>
-          <view class="button_view clear" wx:if="{{ordersLists.status==2}}">
-            <button size="mini" class="orange">提醒发货</button>
-          </view>
           <view class="button_view clear" wx:if="{{ordersLists.status==3}}">
-            <button size="mini">查看物流</button>
-            <button size="mini" class="orange">确认收货</button>
+            <button size="mini" class="orange" bindtap='remindUserSend'>提醒发货</button>
           </view>
           <view class="button_view clear" wx:if="{{ordersLists.status==4}}">
-            <button size="mini">删除订单</button>
+            <button wx:if="{{ordersLists.isSelfRaised == 2}}" size="mini" bindtap='getIsSelfRaisedList'>查看自提点</button>
+            <button size="mini" data-index="{{index}}" class="orange" bindtap='confirmOrder'>确认收货</button>
           </view>
           <view class="button_view clear" wx:if="{{ordersLists.status==5}}">
-            <button size="mini">删除订单</button>
+            <button size="mini" data-index="{{index}}" bindtap="deleteOrder">删除订单</button>
           </view>
-          <view class="button_view clear" wx:if="{{ordersLists.status==6}}">
-            <button size="mini" bindtap="delOrder">删除订单</button>
+          <view class="button_view clear" wx:if="{{ordersLists.status==7}}">
+            <button size="mini" data-index="{{index}}" bindtap="deleteOrder">删除订单</button>
           </view>
-
         </view>
       </view>
 
