--- a/pages/index/confirm/confirm.wxml
+++ b/pages/index/confirm/confirm.wxml
@@ -42,7 +42,7 @@
       </view>
       <view class='confirm__shop__num'>
         <view>¥ {{shoppingNumber
-          < shoppingInfo.dataInfo.discountNumber ? shoppingInfo.dataInfo.price : shoppingInfo.dataInfo.tradePrice}}.00</view>
+          < shoppingInfo.dataInfo.discountNumber ? shoppingInfo.dataInfo.price : shoppingInfo.dataInfo.tradePrice}}</view>
             <view style='color:rgb(135, 135, 135)'>x{{shoppingNumber}}</view>
         </view>
       </view>
@@ -69,7 +69,7 @@
       <view style='height:120rpx; width:100%; background-color:#e0e0e0'></view>
       <view class='confirm__bottom'>
         <view class='confirm__bottom__left'>
-          <text>共{{shoppingNumber}}件 , 合计¥ : <text style='color:rgb(246, 76, 22)'>{{shoppingNumber < shoppingInfo.dataInfo.discountNumber ? shoppingNumber*shoppingInfo.dataInfo.price : shoppingNumber*shoppingInfo.dataInfo.tradePrice}}.00</text></text>
+          <text>共{{shoppingNumber}}件 , 合计¥ : <text style='color:rgb(246, 76, 22)'>{{(shoppingNumber < shoppingInfo.dataInfo.discountNumber ? shoppingNumber*shoppingInfo.dataInfo.price : shoppingNumber*shoppingInfo.dataInfo.tradePrice) - couponNum}}</text></text>
         </view>
         <view class='confirm__bottom__right' bindtap='payment'>
           <text>提交订单</text>
