第三轮修复

--- a/pages/index/details/details.wxml
+++ b/pages/index/details/details.wxml
@@ -83,7 +83,7 @@
 
     <!-- bottomBar -->
     <view class='details__bottom__bar'>
-      <view class='details__bottom__bar__share__shop'>
+      <view class='details__bottom__bar__share__shop' bindtap="share">
         <image class='details__bottom__bar__image' src='../../../img/share.png' />
       </view>
       <view class='details__bottom__bar__share__shop' bindtap='linkShoppingCar'>
