--- a/pages/user/coupon/coupon.wxml
+++ b/pages/user/coupon/coupon.wxml
@@ -2,51 +2,13 @@
 <view class="body_bg"></view>
 <view class="page">
   <view class="page__bd paddig_lR">
-
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-    <view class="couponBox" style='background: #fff;'>
-      <view class="couponMon">代金券
-        <text>10</text>元（满50元可用）</view>
-      <view class="couponTim">有效期至
-        <text>2017-12-19</text> </view>
-    </view>
-
-
+    <block wx:for="{{userCoupon}}" wx:key="*this">
+      <view class="couponBox" style='background: #fff;'>
+        <view class="couponMon">代金券
+          <text>{{item.fee}}</text>元（满50元可用）</view>
+        <view class="couponTim">有效期至
+          <text>2017-12-19</text> </view>
+      </view>
+    </block>
   </view>
 </view>
