--- a/pages/index/details/details.wxml
+++ b/pages/index/details/details.wxml
@@ -83,8 +83,11 @@
 
     <!-- bottomBar -->
     <view class='details__bottom__bar'>
-      <view class='details__bottom__bar__share__shop' bindtap="share">
-        <image class='details__bottom__bar__image' src='../../../img/share.png' />
+      <view class='details__bottom__bar__share__shop'>
+        <!--<image class='details__bottom__bar__image' src='../../../img/share.png' />-->
+        <button open-type='share' class="button_share">
+          <image class='details__bottom__bar__image' src='../../../img/share.png' />
+        </button>
       </view>
       <view class='details__bottom__bar__share__shop' bindtap='linkShoppingCar'>
         <image class='details__bottom__bar__image' src='../../../img/shop.png' />
